--- a/week02/week_03/style.css
+++ b/week02/week_03/style.css
@@ -1,3 +1,17 @@
+@charset "utf-8";
+/* CSS Document */
+
+
+
+
 body{
+
+  font-family: "Georgia", Times, serif; color:black;
+  line-height: 140%;
+  margin-top: 30px; margin-right: 30px; margin-bottom: 30px; margin-left: 30px;
+  background-image: url;("paper.gif")
+
+
+
 
 }
