--- a/week02/week_03/style.css
+++ b/week02/week_03/style.css
@@ -10,6 +10,9 @@ body{
   line-height: 140%;
   margin-top: 30px; margin-right: 30px; margin-bottom: 30px; margin-left: 30px;
   background-image: url("page-bg.gif"); background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #F7F3DE;
+
 
 
 
